13-ingress-api/nginx-ic-host-based-aks/default-ingress-health.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-health-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: akkc-service
                port:
                  number: 80
